Fixed a bug Image is cut off on the Thumbnail Message in mobile mode

--- a/src/ui/OGMessageItemBody/index.scss
+++ b/src/ui/OGMessageItemBody/index.scss
@@ -7,6 +7,7 @@
   width: 320px;
   min-width: 320px;
   @include mobile() {
+    max-width: calc(100vw - 140px);
     min-width: 160px;
   }
 
